syntax = "proto3";

package shoppy_backend;
option go_package = "./";

/**
 * Services
 */
service OrdersOperations {
  rpc FetchOrders (FetchOrdersRequest) returns (FetchOrdersResponse) {}
  rpc FetchOrder (FetchOrderRequest) returns (FetchOrderResponse) {}
}

/**
 * Data Objects
 */
message ItemData {
  int32 id = 1;
  int32 product_id = 2;
  int32 qunatity = 6;
  string name = 3;
  string image = 4;
  float price = 5;
}

message OrdersPageData {
    repeated OrderData orders = 1;
}

message OrderData {
  int32 id = 1;
  string code = 2;
  float total = 3;
  int32 items_count = 4;
  string status = 5;
  string shipped_at = 6;
  string created_at = 7;
  repeated ItemData items = 8;
}

/**
 * Requests
 */
message FetchOrdersRequest {
  int32 user_id = 1;
  int32 page = 2;
}

message FetchOrderRequest {
    int32 user_id = 1;
    int32 order_id = 2;
}

/**
 * Responses
 */
message FetchOrdersResponse {
  bool status = 1;
  string message = 2;
  OrdersPageData data = 3;
}

message FetchOrderResponse {
  bool status = 1;
  string message = 2;
  OrderData data = 3;
}